--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1887,6 +1887,10 @@ p{
   --tw-border-opacity: 1;
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }
+.border-red-300{
+  --tw-border-opacity: 1;
+  border-color: rgb(229 115 115 / var(--tw-border-opacity));
+}
 .border-gray-500{
   --tw-border-opacity: 1;
   border-color: rgb(107 114 128 / var(--tw-border-opacity));
@@ -2111,6 +2115,10 @@ p{
   --tw-text-opacity: 1;
   color: rgb(244 67 54 / var(--tw-text-opacity));
 }
+.text-red-300{
+  --tw-text-opacity: 1;
+  color: rgb(229 115 115 / var(--tw-text-opacity));
+}
 .underline{
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -2324,6 +2332,10 @@ p{
   --tw-border-opacity: 1;
   border-color: rgb(25 25 25 / var(--tw-border-opacity));
 }
+.dark .dark\:border-red-300{
+  --tw-border-opacity: 1;
+  border-color: rgb(229 115 115 / var(--tw-border-opacity));
+}
 .dark .dark\:bg-minsk-900{
   --tw-bg-opacity: 1;
   background-color: rgb(28 24 63 / var(--tw-bg-opacity));
@@ -2357,6 +2369,18 @@ p{
   color: rgb(25 25 25 / var(--tw-text-opacity));
 }
 .dark .dark\:text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.dark .dark\:text-red-300{
+  --tw-text-opacity: 1;
+  color: rgb(229 115 115 / var(--tw-text-opacity));
+}
+.dark .dark\:focus\:border-white:focus{
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+.dark .peer:focus ~ .dark\:peer-focus\:text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
