--- a/public/css/app.css
+++ b/public/css/app.css
@@ -982,6 +982,16 @@ html{
     max-width: 1320px;
   }
 }
+.accordion .collapse.open{
+  opacity: 1;
+  height: 100%;
+  transition: all .35s ease;
+}
+.accordion .collapse:not(.open){
+  opacity: 0;
+  height: 0;
+  transition: all .35s ease;
+}
 .alert{
   position: relative;
   padding: 1rem;
